--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <button>Agendar horário</button>
             </div>
         </nav>
-        <img src="assets/massage.png" alt="">
+        <img class="banner" src="assets/massage.png" alt="">
     </header>
     <main>
         <section class="treatments">
@@ -85,52 +85,85 @@
                     </div>
                 </div>
         </section>
-        <section class="estetica">
-            <h3>Estética e Beleza</h3>
-            <p>Confira em nosso blog os principais tratamentos estéticos para seu corpo e saúde de sua pele, além<br>de curiosidades e dicas para melhorar os cuidados com sua beleza.</p>
-            <div class="card-grid">
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assets/Harmonizacao-Facial-Mitos-e-verdades-po1dglwszgamcwly52afwgdff42uipha7ad23yn750.jpg" alt="">
+        <section class="estetica-background">
+            <section class="estetica">
+                <h3>Estética e Beleza</h3>
+                <p>Confira em nosso blog os principais tratamentos estéticos para seu corpo e saúde de sua pele, além<br>de curiosidades e dicas para melhorar os cuidados com sua beleza.</p>
+                <div class="card-grid">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="assets/Harmonizacao-Facial-Mitos-e-verdades-po1dglwszgamcwly52afwgdff42uipha7ad23yn750.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h4>Harmonização Facial: Mitos e verdades</h4>
+                            <p>A Harmonização está em alta para corrigir<br>alguns detalhes no rosto, como rugas e linhas<br>de expressão. Confira abaixo os principais<br>mitos e verdades sobre.</p>
+                            <button>Quero saber como</button>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h4>Harmonização Facial: Mitos e verdades</h4>
-                        <p>A Harmonização está em alta para corrigir<br>alguns detalhes no rosto, como rugas e linhas<br>de expressão. Confira abaixo os principais<br>mitos e verdades sobre.</p>
-                        <button>Quero saber como</button>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="assets/Alimentacao-saudavel-e-atividade-fisica-02-po1dhit5mnjnn9a5syidtq2k7lkp043vzt71wnaf38.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h4>Alimentação saudável e atividade física</h4>
+                            <p>Os tratamentos estéticos obtém melhores<br>resultados sendo associados a uma boa<br>alimentação e a atividade física. Saiba como e<br>por quê?</p>
+                            <button>Quero saber como</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="assets/Como-cuidar-do-melasma-no-verao-po1dhd64hnbxplicpw2merhsnachpxhhz1a50zis4k.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h4>Como cuidar do melasma no verão</h4>
+                            <p>Confira algumas dicas de cuidados para a sua<br>pele durante o verão e diminua as chances do<br>melasma apresentar piora nessa época do ano.</p>
+                            <button>Quero saber como</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="assets/Como-tratar-o-envelhecimento-facial-po1dhaclx582qrmg6cuqpa7ev4qe2u6aynbol5myn8.jpg" alt="">
+                        </div>
+                        <div class="card-body">
+                            <h4>Como tratar o envelhecimento facial</h4>
+                            <p>O envelhecimento facial é considerado um dos<br>piores inimigos da beleza. A seguir, você<br>encontra informações sobre as causas e<br>principais tratamentos contra este problema.</p>
+                            <button>Quero saber como</button>
+                        </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assets/Alimentacao-saudavel-e-atividade-fisica-02-po1dhit5mnjnn9a5syidtq2k7lkp043vzt71wnaf38.jpg" alt="">
+                <button>Todas as notícias</button>
+            </section>
+        </section>
+        <section class="procedimentos-background">
+            <h3>Procedimentos realizados</h3>
+            <p>Nós da SoftCary, nos preocupamos em oferecer um ambiente agradável, profissionais especializados<br>e tratamentos modernos, garantindo assim plena satisfação a quem procura nossos serviços.<br>Conheça um pouco mais do nosso trabalho através de vídeos!</p>
+            <div class="slider">
+                <div class="slides">
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+                    <input type="radio" name="radio-btn" id="radio3">
+
+                    <div class="slide first">
+                        <img src="assets/Procedimento-de-Criolipolise.jpg" alt="">
                     </div>
-                    <div class="card-body">
-                        <h4>Alimentação saudável e atividade física</h4>
-                        <p>Os tratamentos estéticos obtém melhores<br>resultados sendo associados a uma boa<br>alimentação e a atividade física. Saiba como e<br>por quê?</p>
-                        <button>Quero saber como</button>
+                    <div class="slide">
+                        <img src="assets/Procedimento-de-Drenagem.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="assets/Procedimento-de-Peeling.jpg" alt="">
+                    </div>
+                    <div class="navigation-btn">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assets/Como-cuidar-do-melasma-no-verao-po1dhd64hnbxplicpw2merhsnachpxhhz1a50zis4k.jpg" alt="">
-                    </div>
-                    <div class="card-body">
-                        <h4>Como cuidar do melasma no verão</h4>
-                        <p>Confira algumas dicas de cuidados para a sua<br>pele durante o verão e diminua as chances do<br>melasma apresentar piora nessa época do ano.</p>
-                        <button>Quero saber como</button>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-img">
-                        <img src="assets/Como-tratar-o-envelhecimento-facial-po1dhaclx582qrmg6cuqpa7ev4qe2u6aynbol5myn8.jpg" alt="">
-                    </div>
-                    <div class="card-body">
-                        <h4>Como tratar o envelhecimento facial</h4>
-                        <p>O envelhecimento facial é considerado um dos<br>piores inimigos da beleza. A seguir, você<br>encontra informações sobre as causas e<br>principais tratamentos contra este problema.</p>
-                        <button>Quero saber como</button>
-                    </div>
+                <div class="manual-navigation">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
                 </div>
             </div>
-            <button>Todas as notícias</button>
         </section>
     </main>
     <footer></footer>
